--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Pokedex App",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "http-server",
+    "test": "cypress run"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/rodrigoEsquel/Pokedex/issues"
   },
-  "homepage": "https://github.com/rodrigoEsquel/Pokedex#readme"
+  "homepage": "https://github.com/rodrigoEsquel/Pokedex#readme",
+  "devDependencies": {
+    "cypress": "^9.5.4"
+  }
 }
