--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "server": "http-server",
-    "test": "cypress run"
+    "test": "cypress run",
+    "eslint": "./node_modules/.bin/eslint --fix  ./src/"
   },
   "repository": {
     "type": "git",
