--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Pokedex App",
   "main": "index.html",
   "scripts": {
-    "server": "http-server",
+    "server": "http-server --cors",
     "test": "cypress run",
     "eslint": "./node_modules/.bin/eslint --fix  /src/"
   },
