--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/rodrigoEsquel/Pokedex#readme",
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.17.10",
     "@babel/preset-env": "^7.16.11",
     "babel-jest": "^28.0.2",
     "cypress": "^9.5.4",
@@ -41,6 +42,8 @@
     "jest": "^28.0.2"
   },
   "dependencies": {
-    "@jest/types": "^28.0.2"
+    "@babel/runtime": "^7.17.9",
+    "@jest/types": "^28.0.2",
+    "@types/jest": "^27.4.1"
   }
 }
